--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
     <div style="height: 10vh;"></div>
     
 
+        <!--PRESENTACION-->
+
     <div id="presentacion" class="jumbotron d-flex align-items-center min-vh-100 p-2" style="background-color: rgb(240, 240, 232);">
         <div class="container-fluid" >
           <div class="row">
@@ -108,12 +110,17 @@
 <!-- ESPECIES -->
 <div id="especies" class="jumbotron d-flex align-items-center min-vh-100 p-2">
     <div class="container-fluid" >
-      <div class="row">
-        <div class="col-sm-8" style="margin: auto;">
-          <p class="h1 my-2">Especies</p>
+      <div class="row mx-5">
+        <div class="col">
+          <p class="h4 my-5">Especies</p>
           <div style="height: 5vh;"></div>
+        </div>
+      </div>
+
+      <div class="row mx-5 align-items-center margin-auto">
 
           <!-- tarjeta 1-->
+          <div class="col" style="margin: auto;">
           <div class="card" style="width: 18rem;">
             <img src="img/chanchomoro.jpg" class="card-img-top" alt="...">
             <div class="card-body">
@@ -123,43 +130,89 @@
             <ul class="list-group list-group-flush">
               <li class="list-group-item"><p class="card-text">¿Alguna vez escuchaste hablar del Chancho Moro o Quimilero?</p></li>
               <li class="list-group-item text-center"> 
-                <a class="tooltip-test" title="Tooltip"><i class="fas fa-video me-2 verde"></i></a>
-                <a class="tooltip-test" title="Tooltip"><i class="fas fa-images me-2 verde"></i></a>
+                <a class="tooltip-test" title="Video"><i class="fas fa-video me-2 verde"></i></a>
+                <a class="tooltip-test" title="Imágenes"><i class="fas fa-images me-2 verde"></i></a>
                 <button type="button" class="btn btn-verde" data-bs-toggle="modal" data-bs-target="#tarjeta1">
                   Acceder
                 </button>
               </li>
             </ul>
           </div>
-
-          <!-- Modal tarjeta 1 -->
-          <div class="modal fade" id="tarjeta1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-fullscreen">
-              <div class="modal-content">
-                <div class="modal-header">
-                  <h5 class="modal-title" id="exampleModalLabel">Chancho moro</h5>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                  <h4>Descripción</h4>
-                  <p>
-                    Estos recursos didácticos permiten caracterizar y reconocer a dos especies de mamíferos silvestres de la familia del chancho y el jabalí, muy importantes para la ecorregión del Chaco seco que se pueden encontrar en la provincia de Córdoba. Se trata del pecarí de collar y el chancho quimilero. Su estudio puede colaborar en la construcción de una red trófica de las especies cordobesas.
-                  </p> 
-                </div>
-                <div class="modal-footer">
-                  <button type="button" class="btn btn-verde" data-bs-dismiss="modal">Cerrar</button>
-                </div>
-              </div>
-            </div>
           </div>
 
-        </div>
-      </div>
-    </div>
-</div>
+          <!-- tarjeta 2-->
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="img/chanchomoro.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Chancho moro</h5>
+                <p class="small detalles"><strong>Categoría:</strong> fauna, mamíferos</p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><p class="card-text">¿Alguna vez escuchaste hablar del Chancho Moro o Quimilero?</p></li>
+                <li class="list-group-item text-center"> 
+                  <a class="tooltip-test" title="Video"><i class="fas fa-video me-2 verde"></i></a>
+                  <a class="tooltip-test" title="Imágenes"><i class="fas fa-images me-2 verde"></i></a>
+                  <button type="button" class="btn btn-verde" data-bs-toggle="modal" data-bs-target="#tarjeta1">
+                    Acceder
+                  </button>
+                </li>
+              </ul>
+            </div>
+            </div>
+
+            <!-- tarjeta 2-->
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="img/chanchomoro.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Chancho moro</h5>
+                <p class="small detalles"><strong>Categoría:</strong> fauna, mamíferos</p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><p class="card-text">¿Alguna vez escuchaste hablar del Chancho Moro o Quimilero?</p></li>
+                <li class="list-group-item text-center"> 
+                  <a class="tooltip-test" title="Video"><i class="fas fa-video me-2 verde"></i></a>
+                  <a class="tooltip-test" title="Imágenes"><i class="fas fa-images me-2 verde"></i></a>
+                  <button type="button" class="btn btn-verde" data-bs-toggle="modal" data-bs-target="#tarjeta1">
+                    Acceder
+                  </button>
+                </li>
+              </ul>
+            </div>
+            </div>
+
+            <!-- tarjeta 2-->
+          <div class="col">
+            <div class="card" style="width: 18rem;">
+              <img src="img/chanchomoro.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Chancho moro</h5>
+                <p class="small detalles"><strong>Categoría:</strong> fauna, mamíferos</p>
+              </div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item"><p class="card-text">¿Alguna vez escuchaste hablar del Chancho Moro o Quimilero?</p></li>
+                <li class="list-group-item text-center"> 
+                  <a class="tooltip-test" title="Video"><i class="fas fa-video me-2 verde"></i></a>
+                  <a class="tooltip-test" title="Imágenes"><i class="fas fa-images me-2 verde"></i></a>
+                  <button type="button" class="btn btn-verde" data-bs-toggle="modal" data-bs-target="#tarjeta1">
+                    Acceder
+                  </button>
+                </li>
+              </ul>
+            </div>
+            </div>
+
+        </div> <!-- fin row cards -->
+      </div> <!-- fin container fluid -->
+    </div> <!-- fin sección -->
+
   
 
-<!-- 1 -->
+  
+
+
+<!-- 1 
 <div id="1" class="jumbotron d-flex align-items-center min-vh-100 p-2 bg-verdemusgo">
     <div class="container-fluid" >
       <div class="row">
@@ -217,6 +270,7 @@
       </div>
     </div>
 </div>
+-->
 
 
 
@@ -237,6 +291,63 @@
       </div>
     </div>
   </div>
+
+ <!-- Modal tarjeta 1 -->
+ <div class="modal fade" id="tarjeta1" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-fullscreen">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title h3 verde" id="exampleModalLabel">Chancho moro</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col">
+              <h4 class="verde">¿Alguna vez escuchaste hablar del Chancho Moro o Quimilero?</h4>
+              <p class="small detalles"><strong>Categoría:</strong> fauna, mamíferos</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 order-lg-2">
+              <figure class="figure">
+                <img src="img/chanchomoro.jpg" class="card-img-top" alt="...">
+                <div class="figcaption text-center small">Fuente: <a href="https://biodiversidadfaunacordoba.com/fichas-de-fauna.html">Conservación de la fauna en Córdoba</a>
+                </div>
+              </figure>
+            </div>
+            <div class="col-lg-8 order-lg-1">
+              <h5>Recursos</h5>
+              <a class="tooltip-test" title="Video" target="_blank" href="https://www.youtube.com/watch?v=LSanxBWOlq4&feature=youtu.be"><i class="fas fa-video me-2 verde"></i>Video</a><br>
+              <a class="tooltip-test" title="Reverso" target="_blank" href="https://rdu.unc.edu.ar/bitstream/handle/11086/547293/Folleto-Chancho-Quimilero-WEB_page-0001.jpg?sequence=1&isAllowed=y"><i class="fas fa-image me-2 verde"></i>Lámina 2</a><br>
+              <a class="tooltip-test" title="Anverso" target="_blank" href="https://rdu.unc.edu.ar/bitstream/handle/11086/547293/Folleto-Chancho-Quimilero-WEB_page-0002.jpg?sequence=2&isAllowed=y"><i class="fas fa-image me-2 verde"></i>Lámina 1</a><br>
+              <hr>
+              <h5>Descripción</h5>
+              <p>
+                Estos recursos didácticos permiten caracterizar y reconocer a dos especies de mamíferos silvestres de la familia del chancho y el jabalí, muy importantes para la ecorregión del Chaco seco que se pueden encontrar en la provincia de Córdoba. Se trata del pecarí de collar y el chancho quimilero. Su estudio puede colaborar en la construcción de una red trófica de las especies cordobesas.
+              </p>
+              <hr>
+              <div class="small" style="color: grey;">
+              <h5>Contenidos del Diseño Curricular de la Educación Primaria (Córdoba, ME, 2012): 
+              </h5>
+              <ul>
+                <li>Reconocimiento de la idea de unidad y diversidad a través de la comparación de las plantas entre sí y de los animales entre sí. (p. 158).</li>
+                <li>Interpretación de la unidad y diversidad de los seres vivos en relación con el ambiente en que viven. (p. 157).</li>
+                <li>Reconocimiento de la flora y la fauna autóctona de Córdoba. (p. 163).</li>
+                <li>Reconocimiento de particularidades de los animales y las plantas del ambiente aeroterrestre. (p. 163).</li>
+              </ul>
+            </div>
+            </div>
+           
+          </div>
+        </div> 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-verde" data-bs-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
